完成商品添加UI部分

--- a/ForeEnd/small-profit-management/src/pages/product/addProduct.less
+++ b/ForeEnd/small-profit-management/src/pages/product/addProduct.less
@@ -19,5 +19,13 @@
 .add-product-Att-button {
   width: 60%;
 }
-
+.add-product-introduction{
+  padding: 0 2%;
+  border-radius: 2px;
+  border: #d9d9d9 solid 1px;
+}
+.add-product-from-btn{
+  width: 40%;
+  margin: 5% 5%;
+}
 
