--- a/ForeEnd/small-profit-management/src/pages/product/addProduct.less
+++ b/ForeEnd/small-profit-management/src/pages/product/addProduct.less
@@ -1,19 +1,18 @@
 .dynamic-delete-button {
+  margin: 0 0.8rem;
   cursor: pointer;
   position: relative;
   top: 4px;
   font-size: 24px;
   color: #999;
   transition: all 0.3s;
-}
-
-.dynamic-delete-button:hover {
-  color: #777;
-}
-
-.dynamic-delete-button[disabled] {
-  cursor: not-allowed;
-  opacity: 0.5;
+  :hover {
+    color: #c0beef;
+  }
+  [disabled] {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
 }
 
 .add-product-Att-button {
@@ -28,4 +27,6 @@
   width: 40%;
   margin: 5% 5%;
 }
-
+.product-preview-img{
+  width: 100%;
+}
