完成订单详情页

--- a/ForeEnd/small-profit-management/src/pages/order/order.less
+++ b/ForeEnd/small-profit-management/src/pages/order/order.less
@@ -1,3 +1,22 @@
 .order-address{
   width: 20rem;
 }
+.order-detail-product{
+  width: 48%;
+  float: left;
+  padding: 2%;
+  background-color: #EBEEF5;
+  border-radius: 5px;
+  margin: 1%;
+  .order-detail-product-img{
+    margin-top: 16%;
+    object-fit: fill;
+    width: 80%;
+    padding: 0 2%;
+  }
+  a{
+    :hover{
+      color: #1890ff;
+    }
+  }
+}
