优化订单详情样式

--- a/ForeEnd/small-profit-management/src/pages/order/order.less
+++ b/ForeEnd/small-profit-management/src/pages/order/order.less
@@ -9,9 +9,10 @@
   border-radius: 5px;
   margin: 1%;
   .order-detail-product-img{
-    margin-top: 16%;
+    margin-top: 1%;
+    margin-left: 2%;
     object-fit: fill;
-    width: 80%;
+    width: 75%;
     padding: 0 2%;
   }
   a{
